--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "redux-saga-ecommerce",
+  "name": "server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "pg": "^7.18.2",
+    "pg": "^8.0.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.6"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
+    "sequelize": "^5.21.6",
+    "sequelize-cli": "^5.5.1"
   }
 }
